# SubtitleForge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-mac.sh  build-win.ps1  configure-win.ps1
docs/: EXPORT_DECODE_LOGIC.md  TROUBLESHOOTING.md  WHY_SEQUENTIAL_DECODE_FAILS.md
src/: main.cpp
src/app/: mainwindow.cpp  mainwindow.h
src/audio/: audiodecoder.cpp  audiodecoder.h  audioplayback.cpp  audioplayback.h
src/io/: projectio.cpp  projectio.h
src/model/: animationengine.cpp  animationengine.h  project.cpp  project.h  subtitle.cpp  subtitle.h  subtitleeffect.cpp  subtitleeffect.h  subtitlerenderer.cpp  subtitlerenderer.h
src/video/: premiereexporter.cpp  premiereexporter.h  previewdecoder.cpp  previewdecoder.h  videodecoder.cpp  videodecoder.h  videoexporter.cpp  videoexporter.h
src/widgets/: effectspanel.cpp  effectspanel.h  previewwidget.cpp  previewwidget.h  textinputpanel.cpp  textinputpanel.h  timelinewidget.cpp  timelinewidget.h
